Create nb dir and update Convert2COCO.ipynb.

--- a/nb/Convert2COCO.ipynb
+++ b/nb/Convert2COCO.ipynb
@@ -18,7 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup"
+    "### Setup\n",
+    "* Setup nbdev for Colab<br>"
    ]
   },
   {
@@ -143,8 +144,8 @@
    "source": [
     "import json\n",
     "import glob\n",
-    "from pathlib import Path\n",
-    "import fastcore"
+    "import fastcore\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -152,7 +153,7 @@
    "metadata": {},
    "source": [
     "### Build Path to Data\n",
-    "* Path to data"
+    "* Path to data directory."
    ]
   },
   {
@@ -172,6 +173,15 @@
     "# annotation directory\n",
     "annot_path = Path('/content/annotations')\n",
     "annot_path.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Data\n",
+    "* Download and unzip the JSON files obtained in notebook \"1_Synthetic_Images_Antibiogram.ipynb\". \n",
+    "* Upload the JSON files to directory \"/content/json\"."
    ]
   },
   {
@@ -248,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read and Write JSON"
+    "### Read and Write JSON to Annotation"
    ]
   },
   {
@@ -435,69 +445,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Push to Git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# commit_message = 'Testing nbdev'\n",
-    "# git_push(project_config['git_branch'], commit_message)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !nbdev_install_git_hooks\n",
-    "# !git add Convert2COCO.ipynb\n",
-    "# git_branch = project_config['git_branch']\n",
-    "# !git commit -m \"Update nb\"\n",
-    "# !git push origin $git_branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
-      "\n",
-      "\t\u001b[31mmodified:   Convert2COCO.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !nbdev_install_git_hooks\n",
-    "# !git add Convert2COCO.ipynb\n",
-    "# git_branch = project_config['git_branch']\n",
-    "# !git commit -m \"Update nb\"\n",
-    "# !git push origin $git_branch"
+    "### Reference:\n",
+    "\n",
+    "* nbdev for colab: https://pete88b.github.io/nbdev_colab_helper/tutorial.html"
    ]
   }
  ],
