--- a/nb/Synthetic_Images_Antibiogram.ipynb
+++ b/nb/Synthetic_Images_Antibiogram.ipynb
@@ -1594,7 +1594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Upload to your local drive\n",
+    "# Download to your local drive\n",
     "from google.colab import files\n",
     "# files.download(\"/content/<fname>.zip\")\n",
     "# files.download(\"/content/<fname>.zip\")"
